overview prices issues with text wrapping v14.0

--- a/src/app/prices/overview-prices/overview-prices.component.css
+++ b/src/app/prices/overview-prices/overview-prices.component.css
@@ -44,7 +44,7 @@
 
 .table-with-dates-date-cell {
   padding-right: 10px;
-  position: absolute;
+  position: sticky;
 }
 
 .table-with-prices-price-cell {
